# openlab-style

./: .gitignore  LAUNCH.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml
docs/: matlab-fidelity-audit.md
examples/: _inline_paste_version.py  render_demo.py  render_matlab.m
src/openlab_style/: __init__.py  _parula.py
tests/: test_apply.py
