[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openlab-style"
version = "0.1.0"
description = "Matplotlib styling that makes your plots look like MATLAB. Drop-in for AI workflows."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Vivian Chi", email = "zirongch@umich.edu" },
]
keywords = ["matplotlib", "matlab", "plotting", "styling", "ai", "chatgpt", "code-interpreter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Visualization",
    "Framework :: Matplotlib",
]
dependencies = [
    "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://github.com/nxcodeio/openlab-style"
Source = "https://github.com/nxcodeio/openlab-style"
Issues = "https://github.com/nxcodeio/openlab-style/issues"
"Sister project" = "https://github.com/nxcodeio/openlab"

[project.optional-dependencies]
dev = [
    "numpy>=1.20",
    "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openlab_style = ["py.typed"]
